--- a/RentApp.Web/RentApp/Views/Contact/Create.cshtml
+++ b/RentApp.Web/RentApp/Views/Contact/Create.cshtml
@@ -38,7 +38,7 @@
                                 <span class="text-danger" asp-validation-for="Message"></span>
                         </div>
                         <div class="col-md-12">
-                            <button type="submit" class="send_btn">Send</button>
+                            <button type="submit" class="send_btn">Gönder</button>
                         </div>
                     </div>
                 </form>
